# server/modules/app/src/main/scala/microreso/system/organisation/InitializerFactory.scala
@@ -1,7 +1,7 @@
 package microreso.system.organisation
 
-import microreso.domain.organisation.Initializer
-import microreso.system.db.OrganisationRepositoryPostgres
+import microreso.domain.initialize.Initializer
+import microreso.system.db.{OrganisationRepositoryPostgres, UserRepositoryPostgres}
 import scalikejdbc.DBSession
 
 import scala.concurrent.ExecutionContext
@@ -9,7 +9,8 @@ import scala.concurrent.ExecutionContext
 class InitializerFactory()(implicit ec: ExecutionContext) {
   def create()(implicit session: DBSession): Initializer = {
     new Initializer(
-      organisationRepository = new OrganisationRepositoryPostgres()
+      organisationRepository = new OrganisationRepositoryPostgres(),
+      userRepository = new UserRepositoryPostgres()
     )
   }
 }
