# server/modules/domain/src/main/scala/microreso/domain/user/model/User.scala
@@ -1,0 +1,9 @@
+package microreso.domain.user.model
+
+case class User(
+  id: UserId,
+  username: Username,
+  password: String,
+  email: String,
+  role: UserRole.Value
+)
