# server/modules/domain/src/main/scala/microreso/domain/user/model/Username.scala
@@ -1,0 +1,3 @@
+package microreso.domain.user.model
+
+case class Username(value: String) extends AnyVal
